# conductor

./: .gitignore  LICENSE  README.md  plan.example.yaml  pyproject.toml
.github/workflows/: ci.yml
conductor/: __init__.py  agent.py  app.py  claude_exec.py  cli.py  estimator.py  executor.py  hub.py  ledger.py  memory.py  quota.py  quota_live.py  remote.py  scheduler.py  schema.py  standalone_worker.py  tools.py  ui.py  worker.py
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/icons/: icon.icns
desktop-tauri/src-tauri/src/: main.rs
packaging/: build_app.sh  build_sidecar.sh  conductor.icns  entry.py  serve_entry.py
prompts/: digest.md  scan.md
tests/: test_agent.py  test_claude_exec.py  test_core.py  test_inbox.py  test_mesh.py  test_quota.py
