[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conductor-agent"
version = "0.13.0"
description = "Token-budget-aware task scheduler for the Claude API — declare tasks with time windows, cost budgets, and priorities; the runner executes them within budget."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "AnYejun" }]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.60",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "rich>=13.0",
]
keywords = ["claude", "anthropic", "scheduler", "budget", "tokens", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
app = ["pywebview>=5"]

[project.scripts]
conductor = "conductor.cli:main"

[project.urls]
Homepage = "https://github.com/AnYejun/conductor"

[tool.hatch.build.targets.wheel]
packages = ["conductor"]
